--- a/aks-deploy-from-acr.yaml
+++ b/aks-deploy-from-acr.yaml
@@ -18,7 +18,7 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
-# service type loadbalancer       
+# service type Application loadbalancer       
 ---
 apiVersion: v1
 kind: Service
