--- a/eks-deploy-k8s.yaml
+++ b/eks-deploy-k8s.yaml
@@ -22,7 +22,7 @@ spec:
         - containerPort: 8085
           name: http
           protocol: TCP
-# service type loadbalancer       
+# service type Application loadbalancer       
 ---
 apiVersion: v1
 kind: Service
